--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^6.7.2",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
   }
